# gem-challenge

./: Dockerfile  Makefile  README.md  pyproject.toml
powerplant/: app.py  base_models.py  exceptions.py  models.py  request_models.py  solver.py
src/: models.py  solver.py
tests/: test_app.py  test_models.py  test_request_models.py  test_solver.py
