[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Nicolas Galler <ngaller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
